# bookit-df

./: mkdocs.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/reference/: core.md
docs/tutorials/: 01_getting_started.md  02_mtcars.md  03_probability_distributions.md  index.md
examples/: demo.py  generate_distributions_codebook.py  generate_mtcars_codebook.py  generate_sample_codebook.py
src/bookit/: __init__.py  bookit.py  config.py  stats.py  variable.py
src/bookit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bookit/renderers/: pdf.py
src/bookit_df.egg-info/: PKG-INFO  requires.txt
src/bookit_df/renderers/: pdf.py
