[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookit"
version = "0.1.0"
description = "A codebook creation package for DataFrames"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20.0"]
pandas = ["pandas>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/book-it"
Documentation = "https://github.com/yourusername/book-it#readme"
Repository = "https://github.com/yourusername/book-it"

[tool.setuptools.packages.find]
where = ["src"]
